--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>Sunil Sahani | Full Stack Developer</title>
 
 <style>
@@ -106,7 +108,7 @@
 
   /* PRINT */
   @media print {
-    body {
+    /* body {
       background: #fff;
     }
     .resume {
@@ -125,8 +127,32 @@
   .print-mobile {
   text-align: center;
   margin: 15px 0;
-}
+} */
+  html, body {
+    -webkit-print-color-adjust: exact;
+    print-color-adjust: exact;
+    font-size: 13px;
+    line-height: 1.4 !important;
+  }
 
+  p, li, div {
+    line-height: 1.4 !important;
+  }
+
+  .resume {
+    padding: 0 !important;
+    margin: 0 !important;
+    width: 100%;
+  }
+
+  .editable {
+    outline: none !important;
+  }
+
+  .hint,
+  .print-mobile {
+    display: none !important;
+  }
 .print-mobile button {
   padding: 10px 18px;
   font-size: 14px;
