--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <p class="editable" contenteditable="true"><strong>Frontend:</strong> HTML, CSS, JavaScript, jQuery, React.js</p>
     <p class="editable" contenteditable="true"><strong>Database:</strong> SQL Server</p>
     <p class="editable" contenteditable="true"><strong>E-Commerce:</strong> NopCommerce (Plugins, Theme Customization)</p>
-    <p class="editable" contenteditable="true"><strong>Tools:</strong> Git, GitHub, SVN, Visual Studio, VS Code, Postman</p>
+    <p class="editable" contenteditable="true"><strong>Tools:</strong> GitHub, SVN, Visual Studio, VS Code, Postman</p>
   </div>
 
   <!-- EXPERIENCE -->
@@ -205,7 +205,7 @@
 
     <div class="job">
       <div class="job-title editable" contenteditable="true">
-        Software Developer Intern – Vermillion
+        Software Developer Intern – Vermillion Tech
       </div>
       <div class="job-meta editable" contenteditable="true">
         Feb 2024 – Apr 2024 | Vesu, Surat
